--- a/api/package.json
+++ b/api/package.json
@@ -18,6 +18,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
+    "mongodb": "^6.3.0",
     "mongoose": "^7.5.0",
     "nodemon": "^3.0.1"
   }
